# Event-Driven-Microservices-Backend

./: .gitignore  README.md  run_dev.sh
api-gateway/: Dockerfile  README.md  app.py  pyproject.toml
kafka/: docker-compose.yml  topics.md
postgres/: docker-compose.yml  init.sql
services/: shared_utils.py
services/inventory-service/: Dockerfile  README.md  app.py  config.py  consumer.py  models.py  producer.py  pyproject.toml
services/notification-service/: Dockerfile  README.md  app.py  config.py  consumer.py  database.py  models.py  pyproject.toml
services/order-service/: Dockerfile  README.md  app.py  config.py  models.py  producer.py  pyproject.toml
